--- a/pages/index.html
+++ b/pages/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
-    <title>Modren Life</title>
+    <title>Modern Life</title>
 </head>
 <body>
     <!-- LOGO -->
     <div class="container">
     <div class="logo">
-        <h1>Modren Life</h1>
+        <h1>Modern Life</h1>
     </div>
     <!-- navigation -->
     <div class="nav">
